feat: base HTML, CSS and JS

--- a/index.html
+++ b/index.html
@@ -3,73 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Portfolio of Santiago Mosler - Musician, Developer and Creator.">
-  <title>Santiago Mosler | Portfolio</title>
+  <title>Santiago Mosler | Full Stack Developer</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="script.js"></script>
 </head>
 <body>
-  <!-- 🔹 Header / Navbar -->
   <header class="navbar">
-    <div class="logo">Santiago<span>Mosler</span></div>
+    <div class="logo">Santiago Mosler</div>
     <nav>
-      <ul class="nav-links">
+      <ul>
         <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <div class="menu-toggle" id="mobile-menu">☰</div>
+    <button id="dark-mode-toggle">🌙</button>
   </header>
 
-  <!-- 🔹 Hero Section -->
-  <section class="hero">
-    <div class="hero-text">
-      <h1>Hi, I'm <span>Santiago Mosler</span></h1>
-      <p>Musician • Developer • Creator</p>
-      <a href="#projects" class="btn">View My Work</a>
-    </div>
+  <section id="hero" class="hero">
+    <h1>Full Stack Developer</h1>
+    <p>Building scalable web applications & creative digital solutions</p>
+    <a href="#projects" class="btn">View My Work</a>
   </section>
 
-  <!-- 🔹 About Section -->
   <section id="about" class="about">
     <h2>About Me</h2>
     <p>
-      I am a passionate creator blending technology, art, and sound.
-      With experience in software development, music production, and
-      creative projects, I aim to bring ideas to life in unique ways.
+      I'm a Full Stack Developer passionate about creating modern, efficient, and user-friendly web applications. 
+      My focus is on blending clean code with great user experiences.
     </p>
   </section>
 
-  <!-- 🔹 Projects Section -->
+  <section id="skills" class="skills">
+    <h2>Skills</h2>
+    <div class="skills-grid">
+      <div class="skill-card">JavaScript / TypeScript</div>
+      <div class="skill-card">React.js / Next.js</div>
+      <div class="skill-card">Node.js / Express</div>
+      <div class="skill-card">SQL / MongoDB</div>
+      <div class="skill-card">HTML5 / CSS3</div>
+      <div class="skill-card">Git / GitHub</div>
+    </div>
+  </section>
+
   <section id="projects" class="projects">
     <h2>Projects</h2>
     <div class="project-grid">
       <div class="project-card">
         <h3>Portfolio Website</h3>
-        <p>A modern and minimalist portfolio showcasing my work.</p>
+        <p>Personal portfolio built with HTML, CSS, and JavaScript.</p>
       </div>
       <div class="project-card">
-        <h3>Music Production</h3>
-        <p>Original compositions blending rock, electronic and orchestral elements.</p>
-      </div>
-      <div class="project-card">
-        <h3>Tech Projects</h3>
-        <p>Exploring FPGA, automation, and AI-driven applications.</p>
+        <h3>Full Stack App</h3>
+        <p>Web app with authentication, REST API, and database integration.</p>
       </div>
     </div>
   </section>
 
-  <!-- 🔹 Contact Section -->
   <section id="contact" class="contact">
     <h2>Contact</h2>
-    <p>Interested in collaborating? Let's connect.</p>
-    <a href="mailto:santiagomosler@gmail.com" class="btn">Email Me</a>
+    <p>Let's work together! Reach out to me:</p>
+    <a href="mailto:santiagomosler.dev@gmail.com" class="btn">Email Me</a>
   </section>
 
-  <!-- 🔹 Footer -->
   <footer>
-    <p>© 2025 Santiago Mosler. All Rights Reserved.</p>
+    <p>&copy; 2025 Santiago Mosler. All Rights Reserved.</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
